// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render base component correctly 1`] = `
<div>
  <h1
    class="base large dark"
  >
    Heading
  </h1>
</div>
`;

exports[`<Heading /> renders level 2 size medium variation correctly 1`] = `
<div>
  <h2
    class="base medium dark"
  >
    Heading
  </h2>
</div>
`;

exports[`<Heading /> renders level 4 size small variation correctly 1`] = `
<div>
  <h4
    class="base small dark"
  >
    Heading
  </h4>
</div>
`;
